_sass/typography.scss
@import "vars";

.content {
    a:hover {
        text-decoration: underline;
    }
    ol {
        counter-reset: list;
    }
    ol > li {
        list-style-position: none;
        position: relative;
        list-style: none;
        margin-top: 5px;
        margin-bottom: 5px;
    }
    ul {
        list-style: none; /* remove default (circle bullets) */
        padding: 0 20px;
    }
    ul > li {
        margin: 5px 0;
        position: relative;
    }
    ul > li::before {
        content: "- "; /* dash */
        position: absolute;
        left: -20px;
        color: #333;
    }
    ol {
        padding: 0 30px 0 30px;
    }
    ol > li:before {
        content: "[" counter(list, decimal) "] ";
        counter-increment: list;
        position: absolute;
        left: -30px;
    }
    blockquote {
        border-left: 5px solid #333333;
        margin: 20px 0 20px 0;
        padding: 2px 8px 2px 8px;
        font-style: italic;
    }
    ul.news > li {
        display: grid;
        grid-template-columns: 21ch 1fr;
        margin: 0;
    }
    .links {
        display: inline-block;
        width: 9ch;
    }
    .profile-picture {
        height: $image-size;
        width: $image-size;
        position: relative;
        margin: -10px 0 0 15px;
        float: right;
        border-radius: 50%;
        p & {
            padding: 0;
            margin: 0;
        }
        @media (max-width: $small-width) {
            img {
                margin-top: -5px;
            }
        }
    }
    img {
        text-align: center;
        width: 100%;
    }
}

